# pakalon

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.selfhosted.yml  install.cmd  package-lock.json  package.json
pakalon-backend/: .dockerignore  .env.example  .env.selfhosted.example  .gitignore  Dockerfile  README.md  alembic.ini  completion.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  report.md  sitecustomize.py  status.md  summary.md
pakalon-backend/alembic/: env.py
pakalon-backend/alembic/versions/: 0001_users.py  0002_device_codes_machine_ids.py  0003_subscriptions.py  0004_sessions_messages.py  0005_telemetry.py  0006_model_cache_email_queue.py  0007_model_usage.py  0008_session_context_pct.py  0009_model_created_at.py  0010_figma_pat.py  0011_notifications_session_lineage.py  0012_credits.py  0013_audit_logs_tool_registry_webhooks_heatmap.py  0014_email_queue_fix.py  0015_privacy_mode.py  0016_clerk_to_supabase.py  0017_login_events.py  0018_sessions_title_mode.py  0019_login_events_machine_id.py  0020_automations.py  0021_contribution_days_updated_at.py  0022_automation_visual_editor.py  0023_automation_advanced_features.py  0024_automation_model_id.py  0025_session_token_bridge.py  0026_telegram_token.py  0027_session_file_changes.py
pakalon-backend/app/: __init__.py  audit.py  backup.py  build.py  cache.py  config.py  connection_pool.py  database.py  dependencies.py  env.py  errors.py  features.py  health.py  main.py  metrics.py  model_selector.py  obfuscation.py  providers.py  scheduler.py  security.py  streaming.py  structured_logger.py
pakalon-backend/app/api/: billing.py  oauth.py
pakalon-backend/app/jobs/: __init__.py  billing_notifications.py  email_queue.py  expiry_checker.py  geoip_update.py  model_refresh.py
pakalon-backend/app/middleware/: api_key_obfuscation.py  auth.py  geo_block.py  mode.py  rate_limit.py
pakalon-backend/app/models/: __init__.py  audit_log.py  automation.py  automation_connector.py  automation_execution.py  automation_inbox.py  automation_log.py  automation_memory.py  automation_node_log.py  automation_skill.py  automation_version.py  contribution_day.py  contribution_heatmap.py  credit_ledger.py  device_code.py  email_queue.py  login_event.py  machine_id.py  message.py  metered_usage.py  model_cache.py  model_usage.py  notification.py  oauth_connection.py  rate_limit_event.py  revoked_token.py  session.py  session_file_change.py  subscription.py  task.py  team.py  telemetry_event.py  tool_registry.py  user.py  webhook_dead_letter.py
pakalon-backend/app/routers/: admin.py  ai_proxy.py  audit.py  auth.py  automations.py  billing.py  credits.py  dashboard.py  figma.py  harness.py  health.py  local.py  media.py  models.py  notifications.py  security.py  sessions.py  skills.py  support.py  system.py  tasks.py  teams.py  telemetry.py  tools.py  usage.py  users.py  webhooks.py
pakalon-backend/app/schemas/: auth.py  automations.py  billing.py  models.py  notifications.py  sessions.py  tasks.py  teams.py  telemetry.py  usage.py  users.py  webhooks.py
pakalon-backend/app/services/: automation_audit_svc.py  automation_executor.py  automation_inbox_svc.py  automation_memory_svc.py  automation_skills_svc.py  automation_triggers_svc.py  automations.py  billing.py  billing_calculator.py  billing_notifications.py  billing_service.py  credits.py  device_code.py  email.py  email_service.py  figma.py  heatmap_service.py  local_auth.py  model_registry.py  oauth_service.py  rate_limit.py  scheduler_manager.py  storage.py  supabase_cache.py  tool_service.py  trial_abuse.py  trial_enhanced.py  trigger_dev.py  usage_analytics.py  webhook_retry.py
pakalon-backend/scripts/: download_geoip.py
pakalon-backend/src/: README.md  polar-webhooks.js  rate-limit.js  server.js  telemetry.js
pakalon-backend/tests/: conftest.py  test_auth.py  test_billing.py  test_credits.py  test_dashboard.py  test_emails.py  test_features.py  test_integration.py  test_models.py  test_selfhosted_mode.py  test_session_file_changes.py  test_telegram_connect.py  test_trial_abuse.py  test_usage.py
tmp/oh-my-pi/: .fallowrc.jsonc  .gitattributes  .gitignore  AGENTS.md  Caddyfile.selfhosted  Cargo.toml  Dockerfile  Dockerfile.dockerignore  Dockerfile.robomp  Dockerfile.robomp.dockerignore  LICENSE  README.md  biome.json  bunfig.toml  docker-compose.pakalon.yml  docker-compose.security.yml  docker-compose.selfhosted.yml  package.json  rust-analyzer.toml  rust-toolchain.toml  rustfmt.toml  tsconfig.base.json  tsconfig.json  tsconfig.tools.json
tmp/oh-my-pi/.omp/commands/: agent.md  agents.md  ans.md  auditor.md  automations.md  (+24 more)
tmp/oh-my-pi/assets/: banner.html
tmp/oh-my-pi/docs/: ERRATA-GPT5-HARMONY.md  SELFHOSTED.md  ai-schema-normalize.md  approval-mode.md  auth-broker-gateway.md  bash-tool-runtime.md  blob-artifact-architecture.md  compaction.md  config-usage.md  custom-tools.md  environment-variables.md  extension-loading.md  extensions.md  fs-scan-cache-architecture.md  gemini-manifest-extensions.md  handoff-generation-pipeline.md  hooks.md  install-id.md  keybindings.md  local-models.md  lsp-config.md  marketplace.md  mcp-config.md  mcp-protocol-transports.md  mcp-runtime-lifecycle.md  mcp-server-tool-authoring.md  memory.md  mnemosyne-memory-backend.md  models.md  natives-addon-loader-runtime.md  natives-architecture.md  natives-binding-contract.md  natives-build-release-debugging.md  natives-media-system-utils.md  natives-rust-task-cancellation.md  natives-shell-pty-process.md  natives-text-search-pipeline.md  non-compaction-retry-policy.md  notebook-tool-runtime.md  plugin-manager-installer-plumbing.md  (+22 more)
tmp/oh-my-pi/scripts/: analyze_small_edits.py  check-spoofed-versions.ts  ci-build-native.ts  ci-release-build-binaries.ts  ci-release-notes.ts  ci-release-publish.ts  edit-benchmark.py  edit_benchmark_common.py  eval-bench-runs.ts  host-detect.ts  install.ps1  install.sh  rate-edit-tool.py  release.ts  run-rs-task.ts  setup-npm-trust.ts  sync-themes.ts  sync-versions.ts  tool_io.py  trace-loader.ts
(+2264 files in other folders)
