[package]
name = "pi-iso"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
similar.workspace = true
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
parking_lot.workspace = true

[target.'cfg(windows)'.dependencies]
parking_lot.workspace = true
windows-sys.workspace = true
